--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
     "name": "portfolio",
-    "homepage": "https://Harri-Huynh.github.io/harrisonhuynh.xyz/",
     "private": true,
     "version": "0.0.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
+        "deploy": "vite build && gh-pages --dotfiles -d dist",
         "lint": "eslint .",
-        "preview": "vite preview",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d dist"
+        "preview": "vite preview"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.7.2",
