--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "portfolio",
+    "homepage": "http://Harri-Huynh.github.io/portfolio-website/",
     "private": true,
     "version": "0.0.0",
     "type": "module",
@@ -8,7 +9,8 @@
         "build": "vite build",
         "deploy": "vite build && gh-pages --dotfiles -d dist",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "predeploy": "npm run build"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.7.2",
