changed from browser router to hash router

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "portfolio",
-    "homepage": "http://Harri-Huynh.github.io/portfolio-website/",
+    "homepage": "https://Harri-Huynh.github.io/portfolio-website/",
     "private": true,
     "version": "0.0.0",
     "type": "module",
